// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with challenge suggestion renders correctly 1`] = `
<StepDetailScreen
  CenterContent={
    <Connect(ReminderButton)
      stepId="234242"
    >
      <Component
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "#E6E8EC",
            "borderTopWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 16,
            "paddingVertical": 10,
          }
        }
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "flex-start",
            }
          }
        >
          <Component
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#52C5DC",
                "borderRadius": 16,
                "height": 32,
                "justifyContent": "center",
                "margin": 8,
                "width": 32,
              }
            }
          >
            <Icon
              name="bellIcon"
              style={
                Object {
                  "color": "#ffffff",
                  "fontSize": 18,
                }
              }
              type="MissionHub"
            />
          </Component>
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#52C5DC",
                "fontSize": 16,
              }
            }
          >
            Set a Reminder
          </MyText>
        </Component>
        <Button
          onPress={[Function]}
          style={
            Object {
              "backgroundColor": "#ffffff",
              "borderColor": "#A0A2A6",
              "borderRadius": 16,
              "borderWidth": 1,
              "height": 32,
              "margin": 8,
              "paddingHorizontal": 0,
              "paddingVertical": 0,
              "width": 32,
            }
          }
        >
          <Icon
            name="close"
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 18,
              }
            }
            type="Material"
          />
        </Button>
      </Component>
    </Connect(ReminderButton)>
  }
  CenterHeader={null}
  RightHeader={
    <Button
      buttonTextStyle={
        Object {
          "color": "#A0A2A6",
          "fontSize": 14,
          "fontWeight": "bold",
          "letterSpacing": 1,
        }
      }
      onPress={[Function]}
      style={
        Object {
          "paddingRight": 10,
        }
      }
      text="REMOVE STEP"
      type="transparent"
    />
  }
  bottomButtonProps={
    Object {
      "onPress": [Function],
      "text": "I Did It!",
    }
  }
  markdown="roge rules"
  text="ROBERT"
/>
`;

exports[`without challenge suggestion renders correctly 1`] = `
<StepDetailScreen
  CenterContent={
    <Connect(ReminderButton)
      stepId="234242"
    >
      <Component
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "#E6E8EC",
            "borderTopWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 16,
            "paddingVertical": 10,
          }
        }
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "flex-start",
            }
          }
        >
          <Component
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#52C5DC",
                "borderRadius": 16,
                "height": 32,
                "justifyContent": "center",
                "margin": 8,
                "width": 32,
              }
            }
          >
            <Icon
              name="bellIcon"
              style={
                Object {
                  "color": "#ffffff",
                  "fontSize": 18,
                }
              }
              type="MissionHub"
            />
          </Component>
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#52C5DC",
                "fontSize": 16,
              }
            }
          >
            Set a Reminder
          </MyText>
        </Component>
        <Button
          onPress={[Function]}
          style={
            Object {
              "backgroundColor": "#ffffff",
              "borderColor": "#A0A2A6",
              "borderRadius": 16,
              "borderWidth": 1,
              "height": 32,
              "margin": 8,
              "paddingHorizontal": 0,
              "paddingVertical": 0,
              "width": 32,
            }
          }
        >
          <Icon
            name="close"
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 18,
              }
            }
            type="Material"
          />
        </Button>
      </Component>
    </Connect(ReminderButton)>
  }
  CenterHeader={null}
  RightHeader={
    <Button
      buttonTextStyle={
        Object {
          "color": "#A0A2A6",
          "fontSize": 14,
          "fontWeight": "bold",
          "letterSpacing": 1,
        }
      }
      onPress={[Function]}
      style={
        Object {
          "paddingRight": 10,
        }
      }
      text="REMOVE STEP"
      type="transparent"
    />
  }
  bottomButtonProps={
    Object {
      "onPress": [Function],
      "text": "I Did It!",
    }
  }
  markdown={null}
  text="ROBERT"
/>
`;
